layout bugs fixed

--- a/src/less/inc/button.less
+++ b/src/less/inc/button.less
@@ -60,6 +60,7 @@
 
     .icon {
         font-size: 17px;
+        vertical-align: text-bottom;
     }
 }
 
