--- a/src/less/inc/header.less
+++ b/src/less/inc/header.less
@@ -4,7 +4,7 @@
 ---------------------------------------------------*/
 .h-inner {
     list-style: none;
-    padding: 17px 0;
+    padding: 12px 0;
     margin-bottom: 0;
     position: relative;
     
@@ -153,7 +153,7 @@
     }
 
     .dropdown-menu {
-        top: 55px !important;
+        top: 50px !important;
     }
     
 }
@@ -204,7 +204,7 @@
     input[type="text"] {
         border: 0;
         height: 40px;
-        padding: 0 10px 0 55px;
+        padding: 0 10px 0 45px;
         font-size: 18px;
         border-radius: 2px;
         background-color: darken(@ace, 3%);
@@ -213,14 +213,14 @@
 
     .hsw-close {
         position: absolute;
-        top: 15px;
+        top: 10px;
         font-size: 23px;
         font-style: normal;
         width: 45px;
         text-align: center;
         border-radius: 2px 0px 0px 2px;
         cursor: pointer;
-        left: 15px;
+        left: 10px;
         height: 40px;
         padding-top: 9px;
 
@@ -236,7 +236,7 @@
 
 .hsw-inner {
     position: relative;
-    padding: 15px;
+    padding: 10px;
     max-width: 700px;
     display: block;
     margin: 0 auto;
