--- a/src/less/inc/login.less
+++ b/src/less/inc/login.less
@@ -21,7 +21,11 @@
         .lcb-logo {
             display: block;
             background: url('../img/login-logo.png') center no-repeat;
-            height: 68px;
+            background-size: 100%;
+            width: 80px;
+            height: 67px;
+            margin-right: auto;
+            margin-left: auto;
             margin-bottom: 30px;
         }
 
