--- a/src/less/inc/naokr/question.less
+++ b/src/less/inc/naokr/question.less
@@ -6,9 +6,13 @@
 	padding-bottom: 35px !important;
 }
 
+.question-select-wrap {
+	margin-bottom: 10px;
+}
+
 .question-select {
 	.card {
-		margin-bottom: 15px;
+		margin-bottom: 0;
 	}
 
 	.qs-filter {
