--- a/src/less/inc/sidebar.less
+++ b/src/less/inc/sidebar.less
@@ -1,7 +1,7 @@
 .sidebar {
     position: fixed;
     background: #fff;
-    height: ~"calc(100% - 70px)";
+    height: ~"calc(100% - 60px)";
     top: @header-height;
     .transition(all);
     .transition-duration(300ms);
