--- a/src/less/inc/tabs.less
+++ b/src/less/inc/tabs.less
@@ -80,22 +80,6 @@
                     color: @m-lightblue;
                 }
             }
-
-            &:first-child {
-                text-align: left;
-
-                & > a {
-                    padding-left: 6px;
-                }
-            }
-
-            &:last-child {
-                text-align: right;
-
-                & > a {
-                    padding-right: 6px;
-                }
-            }
         }  
     }
     
