--- a/src/less/inc/variables.less
+++ b/src/less/inc/variables.less
@@ -284,10 +284,10 @@
 /*-------------------------
   Blocks
 --------------------------*/
-@sidebar-left-width: 268px;
-@sidebar-right-width: 280px;
+@sidebar-left-width: 250px;
+@sidebar-right-width: 250px;
 @footer-height: 110px;
-@header-height: 70px;
+@header-height: 60px;
 
 
 /*-------------------------
